# myutil

./: .gitignore  CMakeLists.txt  README.md  SConscript
docs/: conf.py  conf.py.in  index.rst
inc/: myutil.h
inc/myutil/: allocator.h  double_list.h  list.h  log.h  macros.h  test.h  types.h
src/: allocator.c  double_list.c  list.c  test.c
test/: main.c  test_allocator.c  test_double_list.c  test_list.c  test_macros.c  test_main.c  test_types.c
